<resources>
    <string name="app_name">Manage Students</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_student">Add Student</string>
    <string name="first_name">First Name</string>
    <string name="course_name">Course Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="submit">Submit</string>
    <string name="unexpected_error">Sorry, Unexpected Error Occured</string>
    <string name="add_assignment">Add Assignment</string>
    <string name="title">Title</string>
</resources>