<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/edit_text_margin"
        android:textSize="@dimen/standard_text_size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:inputType="textPersonName"
        android:hint="@string/first_name"
        android:padding="@dimen/inside_padding"
        android:background="@drawable/edit_text_background"
        android:drawablePadding="@dimen/inside_padding"
        android:drawableStart="@drawable/ic_student"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_course_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/edit_text_margin"
        android:textSize="@dimen/standard_text_size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:inputType="textPersonName"
        app:layout_constraintTop_toBottomOf="@+id/et_first_name"
        android:hint="@string/course_name"
        android:padding="@dimen/inside_padding"
        android:background="@drawable/edit_text_background"
        android:drawablePadding="@dimen/inside_padding"
        android:drawableStart="@drawable/ic_course"
       />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/edit_text_margin"
        android:textSize="@dimen/standard_text_size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:inputType="phone"
        app:layout_constraintTop_toBottomOf="@+id/et_course_name"
        android:hint="@string/phone_number"
        android:padding="@dimen/inside_padding"
        android:background="@drawable/edit_text_background"
        android:drawablePadding="@dimen/inside_padding"
        android:drawableStart="@drawable/ic_phone_number"
        />
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/edit_text_margin"
        android:textSize="@dimen/standard_text_size"
        android:inputType="textEmailAddress"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_phone_number"
        android:hint="@string/email"
        android:padding="@dimen/inside_padding"
        android:background="@drawable/edit_text_background"
        android:drawablePadding="@dimen/inside_padding"
        android:drawableStart="@drawable/ic_email"
        />
    <ListView
        android:id="@+id/assignmentListView"
        android:layout_width="match_parent"
        android:visibility="invisible"
        android:layout_margin="@dimen/edit_text_margin"
        app:layout_constraintTop_toBottomOf="@+id/addAssignmentButton"
        android:layout_height="wrap_content"/>


    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/addAssignmentButton"
        app:layout_constraintTop_toBottomOf="@+id/et_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/inside_padding"
        android:layout_marginTop="@dimen/edit_text_margin"
        android:layout_marginStart="@dimen/edit_text_margin"
        app:layout_constraintStart_toStartOf="parent"
        android:textAlignment="viewStart"
        android:text="@string/add_student"
        android:textColor="@android:color/black"
        android:background="@drawable/ic_add_assignment"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:text="@string/add_assignment"
        app:layout_constraintTop_toBottomOf="@+id/et_email"
        android:layout_marginTop="@dimen/edit_text_margin"
        android:padding="@dimen/inside_padding"
        app:layout_constraintStart_toEndOf="@+id/addAssignmentButton"
        android:layout_height="wrap_content"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/submitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/button_margin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textColor="@android:color/white"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textSize="@dimen/title_text_size"
        android:text="@string/submit"
        android:background="@drawable/button_background"
        app:layout_constraintTop_toBottomOf="@+id/assignmentListView"
        />

</androidx.constraintlayout.widget.ConstraintLayout>